Fixing z-index issues with datepicker

--- a/layout.css
+++ b/layout.css
@@ -202,5 +202,6 @@ body {
 	width: 50px;
 }
 
-fieldset {
+#ui-datepicker-div {
+	z-index: 1000;
 }
